Whoops, left debug on

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \usepackage[font={bf,sf,footnotesize},justification=justified,singlelinecheck=false]{caption}
 
 % Debug
-\usepackage{showframe}
+%\usepackage{showframe}
 
 % Section colorings
 \definecolor{sectioncolor}{HTML}{3399ff} 
